tests/negative/typechecker_bad4.sp
(* Invalid / operation and var type for operation *)

Var: String = "Hello";

main: Int () {

    a: Int = "Hello, " / 42;

    return 0;
}